fixed alignment between containers

--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@
   margin-bottom: 20px;
 }
 
-/* .text-center {
+.text-center {
   display: none;
-} */
+}
 
-/* .spinner-grow {
+.spinner-grow {
   width: 6rem;
   height: 6rem;
   text-align: center;
-} */
+}
